<resources>
    <string name="app_name">Flex</string>
    <string name="exclamation">!</string>
    <string name="score">Score: </string>
    <string name="streak">Streak: </string>
    <string name="lives">Lives: </string>
    <string name="pause">Restart</string>
    <string name="zero">0</string>
    <string name="start">START!</string>
    <string name="greencirc">Green Circle</string>
    <string name="redcirc">Red Circle</string>
    <string name="playBut">Play Game!</string>
    <string name="authorBut">Author Info</string>
    <string name="authorInfo">App created by Gettysburg College students:</string>
    <string name="authors">
            "
             Will Flower
             Sara Freed
             Laura Gessler
             Dean Helwig
             Megan Heyer
             Nathan Riehl
             Matthew Robinson
             Jamie Welch"</string>
    <string name="backToMain"> Main Menu </string>
</resources>
