<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:background="@color/black"
    tools:context="com.example.willflower.Flex.PlayActivity">

    <TextView
        android:id="@+id/streak"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:text="@string/streak"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/redCirc"
        app:layout_constraintEnd_toStartOf="@+id/textViewStreak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStreak"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="579dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/streak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/redCirc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="579dp"
        android:layout_marginStart="475dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/streak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lives"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="650dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:text="@string/lives"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/redCirc"
        app:layout_constraintEnd_toStartOf="@+id/streak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLives"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="579dp"
        android:layout_marginStart="750dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/streak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="165dp"
        android:background="@color/lightblue"
        android:fontFamily="monospace"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <ImageButton
        android:id="@+id/redCirc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:contentDescription="@string/greencirc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@drawable/ic_green" />

    <ImageButton
        android:id="@+id/greenCirc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:contentDescription="@string/redcirc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@drawable/ic_red" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="373dp"
        android:layout_height="58dp"
        android:layout_marginBottom="53dp"
        android:layout_marginTop="492dp"
        android:background="@color/lightblue"
        android:fontFamily="monospace"
        android:text="@string/pause"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/lightblue" />


</android.support.constraint.ConstraintLayout>
