<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:background="@color/black"
    tools:context="com.example.willflower.Flex.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:layout_marginStart="275dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/greencirc"
            app:layout_constraintBottom_toTopOf="@+id/appname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_green" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/appname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="monospace"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="125sp"
                    android:textStyle="italic"
                    android:typeface="monospace"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.452"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/exclaim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exclamation"
                    android:textColor="@color/green"
                    android:textSize="125sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/appname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.466"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.507" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/playbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/lightblue"
            android:fontFamily="monospace"
            android:text="@string/playBut"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/authorButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/authorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/lightblue"
            android:fontFamily="monospace"
            android:text="@string/authorBut"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playbutton"
            app:layout_constraintTop_toBottomOf="@+id/playbutton" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-300dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/redcirc"
            app:layout_constraintBottom_toTopOf="@+id/appname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_red" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

